# csgy6953-mp1

./: .gitignore  LICENSE  README.md  kaggle-compete.ipynb  pyproject.toml  requirements.txt  resnet-cifar-example.ipynb
checkpoints/: .gitignore  nolabelstest-ckpt-20240403-001830.csv  readme.txt  resnet-3layer253-train-output.txt  resnet-3layer253-train_resume1-output.txt  resnet-3layer253-train_resume3-output.txt
dlmp1/: compete.py  evaluate.py  main.py  select.py  train.py  utils.py
dlmp1/models/: resnet.py
dlmp1_tests/: test_main.py  test_select.py  test_train.py  test_utils.py
dlmp1_tests/models/: test_resnet.py
examples/: CNN with Image Augmentation (CIFAR10).ipynb  explore_models.ipynb  plotting.ipynb
report/: aaai24.bib  dlatextopdf.sh  latex_table.py  latextopdf.sh  mp1-report.tex
report/results/: aug-cosann-experiment-1.txt  aug-defaultaug-plateau.txt  aug-experiment.txt  aug-plateau-experiment.txt  dropout-experiment.txt  final-1-test.txt  final-1.txt  hyperparameters.txt  test-set.txt  weight-decay-experiment.txt
