[project]
name = "dlmp1"
version = "0.1.0"
description = "resnet utilities"
readme = "README.md"
requires-python = ">=3.10, <4"
license = {file = "LICENSE.txt"}
keywords = ["development"]
authors = [
  {name = "Mike Chaberski", email = "mac937@nyu.edu" }
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dlmp1"]